# openboost

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  PLAN.md  README.md  REVIEW_FINDINGS.md  REVIEW_PLAN.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  gpu-tests.yml  publish.yml  unit-tests.yml
api/callbacks/: index.html
api/distributions/: index.html
api/loss/: index.html
api/models/: index.html
api/openboost/: index.html
api/utils/: index.html
benchmarks/: __init__.py  bench_gpu.py  bench_ngboost_comparison.py  check_performance.py  check_scaling.py  compare_cpu.py  compare_gpu.py  compare_realistic.py  ebm_benchmark.py  modal_bench.py  ngboost_benchmark.py  openml_integration.py  performance_report.py  profile_kernels.py  profile_loop.py  run.py  validate_datasets.py  xgboost_benchmark.py
benchmarks/results/: .gitignore  ngboost_comparison_20260720.json
changelog/: index.html
cookbook/: index.html
cookbook/custom-distribution/: index.html
cookbook/custom-growth-strategy/: index.html
cookbook/custom-loss/: index.html
cookbook/device-loss/: index.html
development/autoresearch/: evaluate.py  evaluate_modal.py  evaluate_v2_modal.py  plot_progress.py  profile_modal.py  program.md  program_v2.md  run.sh  scores.jsonl  scores_v2.jsonl  time_breakdown_modal.py  timing_experiment_modal.py
development/onetree/: README.md  run_depth5.py  run_spike.py  run_variant.py  spike_results.json  vectorleaf_normal.py
docs/: changelog.md  index.md  quickstart.md
docs/api/: callbacks.md  distributions.md  loss.md  models.md  openboost.md  utils.md
docs/cookbook/: custom-distribution.md  custom-growth-strategy.md  custom-loss.md  device-loss.md  index.md
docs/getting-started/: gpu-setup.md  installation.md  quickstart.md
docs/journals/: 2026-01-04-mvp-implementation.md  README.md
docs/migration/: from-xgboost.md
docs/planning/: project-0-mvp.md
docs/releases/: ANNOUNCEMENTS.md  RELEASE_NOTES_1.0.0rc1.md
docs/tutorials/: custom-loss.md  uncertainty.md
docs/user-guide/: model-persistence.md  sklearn-integration.md
examples/: README.md  basic_regression.py  binary_classification.py  custom_loss.py  gam_explainability.py  gpu_training.py  kaggle_insurance.py  kaggle_sales.py  model_persistence.py  multiclass_classification.py  sklearn_pipeline.py  uncertainty_quantification.py
getting-started/gpu-setup/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
migration/from-xgboost/: index.html
quickstart/: index.html
releases/ANNOUNCEMENTS/: index.html
releases/RELEASE_NOTES_1.0.0rc1/: index.html
scripts/: create_release.sh  pre_launch_check.py  run_doc_examples.py
search/: search_index.json
src/openboost/: __init__.py  _array.py  _batch.py  _boosting.py  _callbacks.py  _distributions.py  _gam.py  _histogram.py  _loss.py  (+11 more)
tasks/: todo.md
tests/: __init__.py  conftest.py  modal_gpu_tests.py  test_batch.py  test_binning_correctness.py  test_callbacks.py  test_categorical.py  test_core.py  test_cuda_verification.py  test_dart.py  test_distributed.py  test_distribution_gradients.py  test_distributional.py  test_extensibility.py  test_gam.py  test_growth.py  test_integration.py  test_kernel_correctness.py  test_large_scale.py  test_linear_leaf.py  test_loss_correctness.py  test_losses.py  test_missing.py  test_modal.py  test_multigpu.py  test_numerical_agreement.py  test_persistence.py  test_primitives.py  test_regularization.py  test_sklearn.py  test_utils.py  test_validation.py
(+54 files in other folders)
