[project]
name = "openboost"
version = "0.1.0"
description = "The PyTorch of Gradient Boosting. Train-many optimized, research-friendly, GPU-accelerated."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "OpenBoost Contributors" }]
keywords = ["machine-learning", "gradient-boosting", "gpu", "cuda", "numba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "numba>=0.60",
    "joblib>=1.3",
]

[project.optional-dependencies]
cuda = [
    "cupy-cuda12x>=13.0",
]
torch = [
    "torch>=2.0",
]
jax = [
    "jax[cuda12]>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
bench = [
    "modal>=0.73",
    "scikit-learn>=1.0",
]
all = [
    "openboost[cuda,torch,dev,bench]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openboost"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

