[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openboost"
version = "0.2.0"
description = "GPU-accelerated gradient boosting, written in Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "J. Xu" }
]
keywords = ["gradient-boosting", "gbdt", "gpu", "cuda", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "numba>=0.60",
    "joblib>=1.3",
]

[project.optional-dependencies]
cuda = [
    "cupy-cuda12x>=13.0",
]
torch = [
    "torch>=2.0",
]
jax = [
    "jax[cuda12]>=0.4",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
bench = [
    "modal>=0.73",
    "scikit-learn>=1.0",
    "xgboost>=2.0",
]
dev = [
    "openboost[test,bench]",
    "ruff>=0.4",
]
all = [
    "openboost[cuda,torch,dev]",
]

[project.urls]
Homepage = "https://github.com/jxucoder/openboost"
Repository = "https://github.com/jxucoder/openboost"

[tool.hatch.build.targets.sdist]
include = ["src/openboost"]

[tool.hatch.build.targets.wheel]
packages = ["src/openboost"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "xgboost>=3.1.3",
]
